<resources>
    <string name="app_name">A Diligencia</string>
    <string name="texto1">lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nam_et_egestas_nibh_quis_tristique_metus_quisque_euismod_mi_vitae_ultrices_sollicitudin_phasellus_pharetra_sodales_sapien_eget_sagittis_ipsum_fringilla_vel">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et egestas nibh, quis tristique metus. Quisque euismod mi vitae ultrices sollicitudin. Phasellus pharetra sodales sapien, eget sagittis ipsum fringilla vel.</string>
    <string name="btnExp">Experimente!</string>
    <string name="hintEm">Email</string>
    <string name="hintSe">Senha</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="textAcesse">Ou acesse com:</string>
    <string name="textCadastro">Não é cadastrado? Cadastre-se.</string>
    <string name="cadastro_email">Insira o e-mail</string>
    <string name="cadastro_senha">Insira sua senha</string>
    <string name="title_activity_menu_drawer">menuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
