<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".segundaTela"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="155dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="381dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/Branco"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hintEm"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="@color/Branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="381dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/Branco"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hintSe"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/Branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="Esqueceu a sua senha?"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/buttonshape2"
        android:drawableLeft="@android:drawable/ic_menu_send"
        android:onClick="entrar"
        android:paddingLeft="110dp"
        android:paddingRight="110dp"
        android:text="@string/btnEntrar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="135dp"
        android:layout_height="24dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="138dp"
        android:text="@string/textAcesse"
        android:textColor="@color/Branco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/google" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="56dp"
        android:background="@android:color/transparent"
        android:onClick="cadastrar"
        android:text="@string/textCadastro"
        android:textAllCaps="false"
        android:textColor="@color/Branco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>